# dot-dodger

./: Cargo.toml  README.md  shell.nix
assets/configs/: display_config.ron  input_config.ron
assets/textures/: bullet_spritesheet.ron
resources/: display_config.ron
resources/sfx/: single_metal_grate.flac
src/: bullet.rs  collision.rs  enemy.rs  game.rs  input.rs  life.rs  main.rs  physics.rs  player.rs  rendering.rs  sound.rs  utils.rs
src/game/: client.rs  local.rs  mod.rs  server.rs  state.rs
src/game/state/: ingame.rs  ingame_state.rs  main_menu.rs
