[package]
name = "dot-dodger"
version = "0.1.0"
authors = ["Victor Bankowski <victor_bankowski@hotmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33"
ggez = "0.5"
kolli-desu = { git = "https://github.com/WaDelma/kolli-desu"}
specs = "0.15"
specs-derive = "0.3"
nalgebra = "0.17.2"
modulator = "0.1.0"
serde = { version = "1.0", features = ["derive"]}
bincode = "1.2.0"
